Date sorted compiles.  Requires a test